@@ -5,39 +5,6 @@
         <created>Wednesday, February 6, 2002 10:10:00 AM EST</created>
         <mstation>master.nmanage.com</mstation>
     </header>
-    <!-- Use this notificationCommand to send an SNMP Trap as a notification (See notifications.xml example) -->
-    <command binary="false">
-    	<name>snmpTrap</name>
-    	<execute>org.opennms.netmgt.notifd.SnmpTrapNotificationStrategy</execute>
-    	<comment>Class for sending notifications as SNMP Traps</comment>
-    	<argument streamed="false">
-    		<switch>trapVersion</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapTransport</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapHost</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapPort</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapCommunity</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapEnterprise</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapGeneric</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapSpecific</switch>
-    	</argument>
-    	<argument streamed="false">
-    		<switch>trapVarbind</switch>
-    	</argument>
-    </command>
     <command binary="false">
         <name>javaPagerEmail</name>
         <execute>org.opennms.netmgt.notifd.JavaMailNotificationStrategy</execute>
@@ -143,6 +110,17 @@
         <name>xmppMessage</name>
         <execute>org.opennms.netmgt.notifd.XMPPNotificationStrategy</execute>
         <comment>class for sending XMPP notifications</comment>
+        <argument streamed="false">
+            <switch>-xmpp</switch>
+        </argument>
+        <argument streamed="false">
+            <switch>-tm</switch>
+        </argument>
+    </command>
+    <command binary="false">
+        <name>xmppGroupMessage</name>
+        <execute>org.opennms.netmgt.notifd.XMPPGroupNotificationStrategy</execute>
+        <comment>class for sending XMPP Group Chat notifications</comment>
         <argument streamed="false">
             <switch>-xmpp</switch>
         </argument>
